manifests/drone/runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dronerunner
  labels:
    app.kubernetes.io/name: dronerunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dronerunner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dronerunner
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
