manifests/drone/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: droneserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: droneserver
  template:
    metadata:
      labels:
        app: droneserver
    spec:
      containers:
      - name: drone-server
        image: drone/drone:2.12.1
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /var/lib/drone
          name: drone-volume
        - mountPath: /data
          name: drone-volume
      volumes:
      - name: drone-volume
        persistentVolumeClaim:
          claimName: drone-disk-claim
