manifests/drone/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: droneserver
  labels:
    name: droneserver
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  selector:
    app: droneserver
